syntax = "proto3";

package user;

service UserService {
  rpc GetAll (Empty) returns (UsersList);
  rpc Profile (UserId) returns (UserProfile);
  rpc UpdateProfile (UserUpdate) returns (UserUpdate);
  rpc GetProgress (UserId) returns (UserProgressList);
  rpc UpdateProgress (ProgressUpdate) returns (UserProgressList);
}

message Empty {}

message Career {
  int32 id = 1;
  string name = 2;
}

message UserId {
  int32 id = 1;
}

message User {
  int32 id = 1;
  string name = 2;
  string firstLastName = 3;
  string secondLastName = 4;
  string email = 5;
  string rut = 6;
}

message ProgressUpdate {
  int32 userId = 1;
  repeated string addSubjects = 2;   
  repeated string removeSubjects = 3;
}

message UsersList {
  repeated User users = 1;
}

message UserProgressItem {
  int32 id = 1;    
  string code = 2;
}

message UserProgressList {
  repeated UserProgressItem progress = 1;
}

message UserUpdate {
  int32 id = 1;
  optional string name = 2;
  optional string firstLastName = 3;
  optional string secondLastName = 4;
}

message UserProfile {
  int32 id = 1;
  string name = 2;
  string firstLastName = 3;
  string secondLastName = 4;
  string email = 5;
  string rut = 6;
  Career career = 7;
}

